Correções nas classes correspondentes da geração dos atributos do spring
- antes o código estava tentando pegar os parametros com base no comando em vez de pegar aos atributos do spring