@@ -1,22 +1,26 @@
 package com.github.jhonatas48.migrationapi.core;
 
 import com.github.jhonatas48.migrationapi.MigrationProperties;
+import com.github.jhonatas48.migrationapi.core.datasource.DataSourceConnectionInfo;
+import com.github.jhonatas48.migrationapi.core.datasource.DataSourceConnectionInfoProvider;
 import liquibase.Scope;
 import liquibase.command.CommandScope;
 import liquibase.resource.ClassLoaderResourceAccessor;
 import liquibase.resource.ResourceAccessor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.boot.autoconfigure.jdbc.DataSourceProperties;
-import org.springframework.util.StringUtils;
 
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.*;
 import java.time.LocalDateTime;
 import java.time.format.DateTimeFormatter;
 import java.util.Map;
+import java.util.Objects;
 
+/**
+ * Responsável por gerar o diff ChangeLog (Hibernate x Banco) usando Liquibase.
+ * Depende apenas de MigrationProperties e do provider de conexão (SRP / DI / SOLID).
+ */
 public class ChangeLogGenerator {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(ChangeLogGenerator.class);
@@ -28,71 +32,90 @@ public class ChangeLogGenerator {
     private static final DateTimeFormatter TIMESTAMP_FORMAT = DateTimeFormatter.ofPattern("yyyyMMdd-HHmmss");
 
     private final MigrationProperties migrationProperties;
-    private final DataSourceProperties dataSourceProperties;
+    private final DataSourceConnectionInfoProvider connectionInfoProvider;
+    private final YamlConstraintPostProcessor yamlConstraintPostProcessor; // se você já tem essa classe utilitária
 
     public ChangeLogGenerator(MigrationProperties migrationProperties,
-                              DataSourceProperties dataSourceProperties) {
+                              DataSourceConnectionInfoProvider connectionInfoProvider,
+                              YamlConstraintPostProcessor yamlConstraintPostProcessor) {
         this.migrationProperties = migrationProperties;
-        this.dataSourceProperties = dataSourceProperties;
+        this.connectionInfoProvider = connectionInfoProvider;
+        this.yamlConstraintPostProcessor = yamlConstraintPostProcessor;
     }
 
     public GeneratedChangeLog generateDiffChangeLog() throws Exception {
-        // 1) Garantir que temos a URL do JDBC
-        String jdbcUrl = dataSourceProperties.getUrl();
-        if (!StringUtils.hasText(jdbcUrl)) {
-            throw new IllegalStateException(
-                    "Liquibase: 'spring.datasource.url' não está definido. " +
-                            "Defina a URL do JDBC para gerar o diffChangeLog.");
-        }
-
-        // 2) Preparar arquivo de saída
-        Path outputDirectory = Path.of(migrationProperties.getOutputDir()).toAbsolutePath().normalize();
+        Path outputDirectory = Paths.get(migrationProperties.getOutputDir()).toAbsolutePath().normalize();
         Files.createDirectories(outputDirectory);
 
         Path changeLogPath = outputDirectory.resolve(
                 CHANGE_LOG_FILE_PREFIX + LocalDateTime.now().format(TIMESTAMP_FORMAT) + CHANGE_LOG_FILE_SUFFIX
         );
 
-        // 3) Configurar Liquibase + Extensão Hibernate
+        // Extensão Hibernate
         System.setProperty(LIQUIBASE_PLUGIN_PACKAGES_PROP, HIBERNATE_PLUGIN_PACKAGE);
 
-        String dialect = StringUtils.hasText(migrationProperties.getDialect())
-                ? migrationProperties.getDialect().trim()
-                : "";
+        // Monta referenceUrl a partir das entidades + dialect
+        String entityPackagesSegment = buildEntityPackagesSegment(migrationProperties.getEntityPackage());
+        String dialect = nullToEmpty(migrationProperties.getDialect()).trim();
+        String referenceUrl = "hibernate:spring:" + entityPackagesSegment + "?dialect=" + dialect;
 
-        String entityPackages = buildEntityPackagesSegment(migrationProperties.getEntityPackage());
-        String referenceUrl = "hibernate:spring:" + entityPackages + "?dialect=" + dialect;
+        // Pega URL/credenciais direto do Spring (erro claro se faltarem)
+        DataSourceConnectionInfo connectionInfo = connectionInfoProvider.resolve();
 
         CommandScope diff = new CommandScope("diffChangeLog");
         diff.addArgumentValue("referenceUrl", referenceUrl);
         diff.addArgumentValue("changeLogFile", changeLogPath.toString());
+        diff.addArgumentValue("url", connectionInfo.getJdbcUrl());
+        putIfPresent(diff, "username", connectionInfo.getUsername());
+        putIfPresent(diff, "password", connectionInfo.getPassword());
 
-        // AQUI está a correção: passamos a URL (e credenciais se houverem)
-        diff.addArgumentValue("url", jdbcUrl);
-        if (StringUtils.hasText(dataSourceProperties.getUsername())) {
-            diff.addArgumentValue("username", dataSourceProperties.getUsername());
-        }
-        if (StringUtils.hasText(dataSourceProperties.getPassword())) {
-            diff.addArgumentValue("password", dataSourceProperties.getPassword());
-        }
-
-        // 4) ResourceAccessor e Scope
         ClassLoader contextClassLoader = Thread.currentThread().getContextClassLoader();
-        ResourceAccessor resourceAccessor = new ClassLoaderResourceAccessor(contextClassLoader);
+        ResourceAccessor classpathAccessor = new ClassLoaderResourceAccessor(contextClassLoader);
+
         Map<String, Object> scope = Map.of(
-                Scope.Attr.resourceAccessor.name(), resourceAccessor,
+                Scope.Attr.resourceAccessor.name(), classpathAccessor,
                 Scope.Attr.classLoader.name(), contextClassLoader,
                 LIQUIBASE_PLUGIN_PACKAGES_PROP, HIBERNATE_PLUGIN_PACKAGE
         );
 
-        // 5) Executar o diff
         Scope.child(scope, () -> { diff.execute(); return null; });
 
-        String rawYaml = Files.readString(changeLogPath, StandardCharsets.UTF_8);
-        boolean hasChangeSets = rawYaml.contains("\n- changeSet:");
+        String generatedYaml = Files.readString(changeLogPath, StandardCharsets.UTF_8);
+
+        boolean hasChangeSets = generatedYaml.contains("\n- changeSet:");
+        if (!hasChangeSets && migrationProperties.isSkipWhenEmpty()) {
+            Files.deleteIfExists(changeLogPath);
+            LOGGER.info("Nenhuma diferença detectada. Nada a aplicar.");
+            return new GeneratedChangeLog(null, "", false);
+        }
+
+        String finalYaml = generatedYaml;
+
+        if (migrationProperties.isAutoNameConstraints() && yamlConstraintPostProcessor != null) {
+            String processed = yamlConstraintPostProcessor.process(finalYaml);
+            if (!Objects.equals(finalYaml, processed)) {
+                Files.writeString(changeLogPath, processed, StandardCharsets.UTF_8, StandardOpenOption.TRUNCATE_EXISTING);
+                LOGGER.info("YAML ajustado: constraints sem nome foram nomeadas automaticamente.");
+                finalYaml = processed;
+            }
+        }
+
+        if (migrationProperties.isLogDiffContent()) {
+            LOGGER.info("YAML gerado:\n{}", finalYaml);
+        }
 
         LOGGER.info("ChangeLog gerado em {}", changeLogPath);
-        return new GeneratedChangeLog(changeLogPath, rawYaml, hasChangeSets);
+        return new GeneratedChangeLog(changeLogPath.toString(), finalYaml, true);
+    }
+
+    private static void putIfPresent(CommandScope command, String argumentName, String value) {
+        if (value != null && !value.isBlank()) {
+            command.addArgumentValue(argumentName, value);
+        }
+    }
+
+    private static String nullToEmpty(String s) {
+        return s == null ? "" : s;
     }
 
     private static String buildEntityPackagesSegment(String configuredPackages) {
@@ -101,30 +124,39 @@ public class ChangeLogGenerator {
                 : configuredPackages;
 
         String[] split = source.split("[,;]");
-        StringBuilder builder = new StringBuilder();
+        StringBuilder joined = new StringBuilder();
         for (String s : split) {
-            String trimmed = s.trim();
-            if (!trimmed.isEmpty()) {
-                if (builder.length() > 0) builder.append(',');
-                builder.append(trimmed);
+            String pkg = s.trim();
+            if (!pkg.isEmpty()) {
+                if (!joined.isEmpty()) joined.append(",");
+                joined.append(pkg);
             }
         }
-        return builder.toString();
+        return joined.isEmpty() ? "com.exemplo.domain" : joined.toString();
     }
 
-    // DTO simples usado pelo serviço
+    /** DTO interno equivalente ao que o MigrationService já espera. */
     public static final class GeneratedChangeLog {
-        private final Path absolutePath;
-        private final String yamlContent;
-        private final boolean containsChangeSets;
+        private final String absolutePath;
+        private final String content;
+        private final boolean hasActionableChanges;
 
-        public GeneratedChangeLog(Path absolutePath, String yamlContent, boolean containsChangeSets) {
+        public GeneratedChangeLog(String absolutePath, String content, boolean hasActionableChanges) {
             this.absolutePath = absolutePath;
-            this.yamlContent = yamlContent;
-            this.containsChangeSets = containsChangeSets;
+            this.content = content;
+            this.hasActionableChanges = hasActionableChanges;
         }
-        public Path getAbsolutePath() { return absolutePath; }
-        public String getYamlContent() { return yamlContent; }
-        public boolean isContainsChangeSets() { return containsChangeSets; }
+
+        public String getAbsolutePath() {
+            return absolutePath;
+        }
+
+        public String getContent() {
+            return content;
+        }
+
+        public boolean hasActionableChanges() {
+            return hasActionableChanges;
+        }
     }
 }
